--- a/ihdex.html
+++ b/ihdex.html
@@ -61,7 +61,7 @@
         <span><strong>Organization:</strong> <span id="org"></span></span><br>
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
-    <div class="text">GG : 0sf2 : discord.gg/i don't have discord</div>
+    <div class="text">GG : 0sf2 : discord.gg/ia3x</div>
 
     <script>
          fetch('https://ipinfo.io/json')
